--- a/shooter/Assembly-CSharp.csproj
+++ b/shooter/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets\Scripts\Boss.cs" />
      <Compile Include="Assets\Scripts\BossSkull.cs" />
      <Compile Include="Assets\Scripts\BossSkullSpawner.cs" />
+     <Compile Include="Assets\Scripts\BrokenSkull.cs" />
      <Compile Include="Assets\Scripts\Character.cs" />
      <Compile Include="Assets\Scripts\DamagingEntity.cs" />
      <Compile Include="Assets\Scripts\DeathShot.cs" />
