--- a/shooter/Assembly-CSharp.csproj
+++ b/shooter/Assembly-CSharp.csproj
@@ -75,6 +75,8 @@
      <Compile Include="Assets\Scripts\Spawner.cs" />
      <Compile Include="Assets\Scripts\SubBoss.cs" />
      <Compile Include="Assets\Scripts\Turret.cs" />
+     <Compile Include="Assets\Scripts\floatingScore.cs" />
+     <Compile Include="Assets\Scripts\floatingX2.cs" />
  <Reference Include="UnityEngine.Networking">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
